<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/sixteen_dp"
    android:background="@color/background"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movies"
            android:textColor="@color/white"
            android:textSize="@dimen/twentyfour_sp"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/twelve_dp"/>

        <com.jackandphantom.carouselrecyclerview.CarouselRecyclerview
            android:id="@+id/cr_rview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_movie" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_shows"
            android:textColor="@color/white"
            android:textSize="@dimen/twentyfour_sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="@dimen/twelve_dp"/>

        <com.jackandphantom.carouselrecyclerview.CarouselRecyclerview
            android:id="@+id/cr_tvshows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_tvshow" />

    </LinearLayout>

</ScrollView>